# vlc

./: configure.ac  meson.build
extras/package/apple/: build.sh
include/: vlc_fourcc.h  vlc_vulkan.h
modules/misc/: securetransport.c
modules/video_output/: Makefile.am
modules/video_output/opengl/: converter_sw.c  fragment_shaders.c  vout_helper.c  vout_helper.h
modules/video_output/vulkan/: instance_helper.c  win32.c
src/: Makefile.am  libvlccore.sym  meson.build
src/misc/: fourcc.c
