
libvlccore_sources = [
    'libvlc.c',
    'libvlc.h',
    'libvlc-module.c',
    'missing.c',
    'revision.c',
    'version.c',
    'config/configuration.h',
    'config/core.c',
    'config/chain.c',
    'config/file.c',
    'config/help.c',
    'config/intf.c',
    'config/cmdline.c',
    'config/getopt.c',
    'config/vlc_getopt.h',
    'extras/libc.c',
    'modules/modules.h',
    'modules/modules.c',
    'modules/bank.c',
    'modules/cache.c',
    'modules/entry.c',
    'modules/textdomain.c',
    'interface/dialog.c',
    'interface/interface.c',
    'playlist/playlist_internal.h',
    'playlist/art.c',
    'playlist/art.h',
    'playlist/aout.c',
    'playlist/thread.c',
    'playlist/control.c',
    'playlist/engine.c',
    'playlist/fetcher.c',
    'playlist/fetcher.h',
    'playlist/sort.c',
    'playlist/loadsave.c',
    'playlist/preparser.c',
    'playlist/preparser.h',
    'playlist/tree.c',
    'playlist/item.c',
    'playlist/search.c',
    'playlist/services_discovery.c',
    'playlist/renderer.c',
    'input/item.c',
    'input/access.c',
    'input/clock.c',
    'input/control.c',
    'input/decoder.c',
    'input/demux.c',
    'input/demux_chained.c',
    'input/es_out.c',
    'input/es_out_timeshift.c',
    'input/event.c',
    'input/input.c',
    'input/info.h',
    'input/meta.c',
    'input/clock.h',
    'input/decoder.h',
    'input/demux.h',
    'input/es_out.h',
    'input/es_out_timeshift.h',
    'input/event.h',
    'input/item.h',
    'input/mrl_helpers.h',
    'input/stream.h',
    'input/input_internal.h',
    'input/input_interface.h',
    'input/vlm_internal.h',
    'input/vlm_event.h',
    'input/resource.h',
    'input/resource.c',
    'input/services_discovery.c',
    'input/stats.c',
    'input/stream.c',
    'input/stream_fifo.c',
    'input/stream_extractor.c',
    'input/stream_filter.c',
    'input/stream_memory.c',
    'input/subtitles.c',
    'input/var.c',
    'audio_output/aout_internal.h',
    'audio_output/common.c',
    'audio_output/dec.c',
    'audio_output/filters.c',
    'audio_output/output.c',
    'audio_output/volume.c',
    'video_output/chrono.h',
    'video_output/control.c',
    'video_output/control.h',
    'video_output/display.c',
    'video_output/display.h',
    'video_output/event.h',
    'video_output/inhibit.c',
    'video_output/inhibit.h',
    'video_output/interlacing.c',
    'video_output/interlacing.h',
    'video_output/snapshot.c',
    'video_output/snapshot.h',
    'video_output/statistic.h',
    'video_output/video_output.c',
    'video_output/video_text.c',
    'video_output/video_epg.c',
    'video_output/video_widgets.c',
    'video_output/vout_subpictures.c',
    'video_output/vout_spuregion_helper.h',
    'video_output/window.c',
    'video_output/window.h',
    'video_output/opengl.c',
    'video_output/vout_intf.c',
    'video_output/vout_internal.h',
    'video_output/vout_control.h',
    'video_output/vout_wrapper.c',
    'network/getaddrinfo.c',
    'network/http_auth.c',
    'network/httpd.c',
    'network/io.c',
    'network/tcp.c',
    'network/udp.c',
    'network/rootbind.c',
    'network/tls.c',
    'text/charset.c',
    'text/memstream.c',
    'text/strings.c',
    'text/unicode.c',
    'text/url.c',
    'text/filesystem.c',
    'text/iso_lang.c',
    'text/iso-639_def.h',
    'misc/actions.c',
    'misc/background_worker.c',
    'misc/background_worker.h',
    'misc/md5.c',
    'misc/probe.c',
    'misc/rand.c',
    'misc/mtime.c',
    'misc/block.c',
    'misc/fifo.c',
    'misc/fourcc.c',
    'misc/fourcc_list.h',
    'misc/es_format.c',
    'misc/picture.c',
    'misc/picture.h',
    'misc/picture_fifo.c',
    'misc/picture_pool.c',
    'misc/interrupt.h',
    'misc/interrupt.c',
    'misc/keystore.c',
    'misc/renderer_discovery.c',
    'misc/threads.c',
    'misc/cpu.c',
    'misc/epg.c',
    'misc/exit.c',
    'misc/events.c',
    'misc/image.c',
    'misc/messages.c',
    'misc/mime.c',
    'misc/objects.c',
    'misc/objres.c',
    'misc/variables.h',
    'misc/variables.c',
    'misc/error.c',
    'misc/xml.c',
    'misc/addons.c',
    'misc/filter.c',
    'misc/filter_chain.c',
    'misc/httpcookies.c',
    'misc/fingerprinter.c',
    'misc/text_style.c',
    'misc/subpicture.c',
    'misc/subpicture.h',
    '../compat/aligned_alloc.c',
    '../compat/memrchr.c',
    '../compat/timespec_get.c',
    '../compat/tdestroy.c'
]

libvlccore_posix_sources = [
    'posix/filesystem.c',
    'posix/plugin.c',
    'posix/rand.c',
    'posix/timer.c'
]

libvlccore_sout_sources = [
    'stream_output/sap.c',
    'stream_output/sdp.c',
    'stream_output/stream_output.c',
    'stream_output/stream_output.h'
]

libvlccore_vlm_sources = [
    'input/vlm.c',
    'input/vlm_event.c',
    'input/vlmshell.c'
]

libvlccore_sources_darwin = [
    libvlccore_sources,
    libvlccore_sout_sources,
    libvlccore_posix_sources,
    libvlccore_vlm_sources,
    'darwin/dirs.c',
    'darwin/error.c',
    'darwin/netconf.c',
    'darwin/specific.c',
    'darwin/thread.c'
]


corefoundation_dep = dependency('CoreFoundation')
cfnetwork_dep = dependency('CFNetwork')
thread_dep = dependency('threads')

iconv_lib = cc.find_library('iconv', required : true)

library(
    'vlccore',
    libvlccore_sources_darwin,
    include_directories : incdir,
    version : '9.0.0',
    c_args : ['-DMODULE_STRING="core"', '-DHAVE_DYNAMIC_PLUGINS', ],
    link_args : ['-compatibility_version 10', '-current_version 10.0'],
    dependencies : [thread_dep, corefoundation_dep, cfnetwork_dep, iconv_lib]
)
